@@ -1,11 +1,3 @@
-#main
-{
-    padding-top: 15px;
-}
-form
-{
-    padding-left: 50px;
-}
 table th
 {
     width: 180px;
